--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: rust
+env:
+  global:
+    - secure: dmKHeOySluuwyXckc3YKl9wyfZSr1d8hMSDh4739MW6f1n5xYVXHKECPTnFSUPBjVNQ8Qahw48w2tnezGO1DvOOxYqPe69PGtpaLX3CoOZOvyCOoBgkH+MA8cjz3Ymk8uoPc97OZQdwQ+5XvW0BKsGxbUfnfX29kHewc3Hc+tkM=
 script:
-  - cargo build
-  - cargo test
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc --verbose
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
 notifications:
   email:
     recipients:
