Fix generation of documentation to rust-ci; add URL.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ env:
 script:
   - cargo build --verbose
   - cargo test --verbose
-  - cargo doc --verbose
 after_script:
+  - cargo doc --verbose
+  - cp -R target/doc doc
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
 notifications:
   email:
